project(rtc_modules)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
add_subdirectory(audio_coding)
add_subdirectory(audio_device)
add_subdirectory(audio_mixer)
add_subdirectory(audio_processing)
add_subdirectory(bitrate_controller)
add_subdirectory(congestion_controller)
add_subdirectory(pacing)
#add_subdirectory(remote_bitrate_estimator)
#add_subdirectory(rtp_rtcp)
#add_subdirectory(utility)
#add_subdirectory(video_coding)
#add_subdirectory(video_processing)

add_library(${PROJECT_NAME} INTERFACE)
target_link_libraries(${PROJECT_NAME} INTERFACE audio_coding)
target_compile_definitions(rtc_audio_coding PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_audio_device PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_audio_mixer PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_audio_processing PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_audio_processing PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_bitrate_controller PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_congestion_controller PUBLIC ${rtc_definitions})
target_compile_definitions(rtc_pacing PUBLIC ${rtc_definitions})